--- a/L11-da2-data-wrangling.Rmd
+++ b/L11-da2-data-wrangling.Rmd
@@ -398,19 +398,34 @@ write_csv(heightSummary, path = file.path('data_output', 'heightSummary.csv')
 
 # Tips
 
-You will often need to create new variables based on a condition. For example, perhaps you want to identify which of the observations in the wildlife impacts data cost more than $10,000 in damages. Well
+You will often need to create new variables based on a condition. To do this, you can use the `ifelse()` function. Here's the general syntax:
 
-# if/else statements with `ifelse()`
-
-To create a new variable based on a condition, use `ifelse()`
-<br>
-
-```{r}
-spicegirls %>%
-    mutate(
-        nameIsMel = ifelse(firstName == 'Melanie', TRUE, FALSE))
+```{r, eval=FALSE}
+ifelse(<condition>, <if TRUE>, <else>)
 ```
 
+The first argument is a condition. If the condition is TRUE, then the value given to the second argument will be used; if not, then the third argument value will be used.
+
+Here's an example of creating a variable to determine which months in the wildlife impacts data are in the summer:
+
+```{r, eval=FALSE}
+df %>%
+    mutate(
+        summer_month = ifelse(incident_month %in% c(6, 7, 8), TRUE, FALSE))
+```
+
+Of course, in this particular case the `ifelse()` function isn't even needed because the condition returns `TRUE` and `FALSE` values. However, if you wanted to extend this example to determine all four seasons, you could use a series of nested `ifelse()` functions:
+
+```{r, eval=FALSE}
+df %>%
+    mutate(season =
+        ifelse(
+            incident_month %in% c(3, 4, 5), 'Spring',
+        ifelse(
+            incident_month %in% c(6, 7, 8), 'Summer',
+        ifelse(
+            incident_month %in% c(9, 10, 11), 'Fall', 'Winter'))))
+```
 
 ---
 
