--- a/P8-data-frames.Rmd
+++ b/P8-data-frames.Rmd
@@ -11,11 +11,10 @@ rm(list=objects()) # start with a clean workspace
 source("knitr_setup.R")
 ```
 
----
+To get a handle on working with tibbles (i.e. data frames) in R, here are some other resources to check out:
 
-**Page sources**:
-
-Some content on this page has been modified from other courses, including:
-
-- CMU [15-112: Fundamentals of Programming](http://www.kosbie.net/cmu/spring-17/15-112/), by [David Kosbie](http://www.kosbie.net/cmu/) & [Kelly Rivers](https://hcii.cmu.edu/people/kelly-rivers)
-- Danielle Navarro's website ["R for Psychological Science"](https://psyr.org/index.html)
+- [RStudio Primers on Working with Data:](https://rstudio.cloud/learn/primers/2)
+  - [Working with Tibbles](https://rstudio.cloud/learn/primers/2.1)
+  - [Isolating Data with dplyr](https://rstudio.cloud/learn/primers/2.2)
+  - [Derive Information with dplyr](https://rstudio.cloud/learn/primers/2.3)
+- [R Data Frames](https://www.datamentor.io/r-programming/data-frame/), by datamentor.io
