--- a/hw6-data-visualization.Rmd
+++ b/hw6-data-visualization.Rmd
@@ -17,12 +17,13 @@ output:
 
 # Mini data analysis project
 
-### 1) Choose a dataset [10 pts]
+### 1) Choose a dataset [5 pts]
 
-You will need to select a dataset for your project. To keep things manageable, your dataset must be available from one of the following R packages:
+You will need to select a dataset for your project. To keep things manageable, you must choose one of the datasets available in one the following R packages:
 
+- `dplyr`
+- `ggplot2`
 - `dslabs`
-- `other`
 
 As an example of the variety of datasets you can choose from, here is a preview of all of the datasets available in the [**dslabs** R package](https://github.com/rafalab/dslabs):
 
@@ -60,8 +61,7 @@ opec (gapminder)        Gapminder Data
 outlier_example         Adult male heights in feet with outliers
 polls_2008              Poll data for popular vote in 2008 presidential
                         election
-polls_us_election_2016
-                        Fivethirtyeight 2016 Poll Data
+polls_us_election_2016  Fivethirtyeight 2016 Poll Data
 raw_data_research_funding_rates
                         Gender bias in research funding in the
                         Netherlands
@@ -94,23 +94,23 @@ Once you've chosen a dataset, start setting up your analysis environment by foll
 
 ### 3) Inspect your data [10 pts]
 
-Now that your environment is set up, open up your `explore.R` file and begin exploring your dataset. Be sure to install and load the library that contains the dataset.
+Now that your environment is set up, open up your `explore.R` file and begin exploring your dataset. Be sure to load the library that contains the dataset.
 
-Write some code to preview and summarize each of these data frames using some of the methods we've seen in class and in the lessons on [data frames](L10-da1-data-frames.html) and [data wrangling](L11-da2-data-wrangling.html). You should be able to quickly get an understanding of what variables are included in the data frame and their nature. Consider the following questions in your exploration:
+Write some code to preview and summarize the dataset using some of the methods we've seen in class and in the lessons on [data frames](L10-da1-data-frames.html) and [data wrangling](L11-da2-data-wrangling.html). You should be able to quickly get an understanding of what variables are included in the data frame and their nature. Consider the following questions in your exploration:
 
 - What type of data is each variable?
 - What is the total size of the data frame?
 - What are the boundaries of each period of observation (e.g. what time period do the observations in the data frame span)?
 - Do any variables have missing values, and if so which ones have more NAs than others? Why might that be the case?
 
-Do not brush this step off - the more thoroughly you inspect your dataset, the easier (and better) you data exploration will be. This will be important for step 4, and absolutely critical for step 5. Make sure you take the time to develop an understanding of the variables in your dataset as it is nearly impossible to imagine what summary plots might be worth creating otherwise.
+**Do not brush this step off** - the more thoroughly you inspect your dataset, the easier (and better) you data exploration will be. This will be important for step 4, and absolutely critical for step 5. Make sure you take the time to develop an understanding of the variables in your dataset as it is nearly impossible to imagine what summary plots might be worth creating otherwise.
 
 ### 4) Document and summarize your dataset [15 pts]
 
 Open up your "hw6.Rmd" file and write a paragraph in the section labeled `# Data description` describing of your dataset. Include the following:
 
-1. A brief overview of the subject matter of the dataset. What's this data about?
-2. A description of the data _source_. Include a direct link to where you downloaded the data. Also include as much information as possible about how the data were collected (when, where, by whom, etc.) and whether the data have already been pre-processed or not.
+1. A brief overview of the subject matter of the dataset. What is this dataset about?
+2. A description of the data _source_. Read the package help files to identify as much information as possible about how the data were collected (when, where, by whom, etc.) and whether the data have already been pre-processed or not. If the data come from a published paper, include a citation to that paper.
 3. A summary table of each variable in the dataset. Each row should be a variable, and the columns should be the variable name and a short description of the variable (the "hw6.Rmd" template already has this table started for you).
 
 ### 5) Make plots [30 pts (15 per plot)]
@@ -120,19 +120,21 @@ Now that you have a basic understanding of the dataset, make some plots to explo
 1. A scatterplot of two variables.
 2. A histogram or barplot of one or more variables.
 
-You can choose to plot whichever variables you wish, but you must be able to interpret the results of your plot. I recommend that you first make your plots in your `explore.R` file to iterate on your code until the plots are in their final form. Then copy the code for your final plots over to the appropriate code chunks in your "hw6.Rmd" file. Be sure to first load your data in the provided code chunk in your "hw6.Rmd" file, otherwise your plotting code won't work.
+You can choose to plot whichever variables you wish, but you must be able to interpret the results of your plot. I recommend that you first make your plots in your `explore.R` file to iterate on your code until the plots are in their final form you desire. Then copy the code for your final plots over to the appropriate code chunks in your "hw6.Rmd" file.
+
+### 6) Interpret your plots [15 pts]
 
 Below each figure, write a description and interpretation of your plot. Make sure you address at least the following questions:
 
 1. Describe what variables you are plotting and why.
 2. Describe the primary relationship / trend / information you hope the reader will gain from your visualization.
 
-### 6) Publish your writeup [10 pts]
+### 7) Publish your writeup [10 pts]
 
-Once you have completed your analysis, compile the "hw6.Rmd" file by opening it in RStudio and clicking the "knit" button. In the upper-right of the window that opens showing your compiled hw6.html file, click on the "publish" button and publish your file to http://rpubs.com/. You should create an account with rpubs if you have not already. Once published, you can update it by making edits to your "hw6.Rmd" file, clicking the "knit" button again, and then clicking the "Republish" button in the upper-right of the RStudio preview window.
+Once you have completed your analysis, compile the "hw6.Rmd" file by opening it in RStudio and clicking the "knit" button. In the upper-right of the window that opens showing your compiled hw6.html file, click on the "Publish" button and publish your file to http://rpubs.com/. You should create an account with rpubs if you have not already. Once published, you can update it by making edits to your "hw6.Rmd" file, clicking the "knit" button again, and then clicking the "Republish" button in the upper-right of the RStudio preview window.
 
 For a visual overview of the publishing process, refer to the instructions in the [youtube video](https://emse6574-gwu.github.io/2019-Fall/L13-da4-communicating-information.html#34_publish_to_the_web) in the lesson on Communicating Information.
 
-### 7) Submit your files on Blackboard [10 pts]
+### 8) Submit your files on Blackboard [5 pts]
 
 After publishing your "hw6.Rmd" file, create a zip file of all files in your R project folder for this assignment and submit the zip file on Blackboard by the due deadline. **Include a link to your published report on rpubs in your Blackboard submission**
