Added dplyr verb graphics to L11

--- a/classNotes/11-data-wrangling/slides-11-data-wrangling.Rmd
+++ b/classNotes/11-data-wrangling/slides-11-data-wrangling.Rmd
@@ -407,7 +407,7 @@ spicegirls %>%
 # Create new variables with `mutate()`
 
 <center>
-<img src="images/monsters_mutate.jpg" width="650">
+<img src="images/horst_monsters_mutate.jpg" width="650">
 </center>
 
 ---
