--- a/P10-data-visualization.Rmd
+++ b/P10-data-visualization.Rmd
@@ -11,7 +11,9 @@ rm(list=objects()) # start with a clean workspace
 source("knitr_setup.R")
 ```
 
-For using **ggplot2**, take a look at the [RStudio cheatsheet](https://www.rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf)
+One of the best tutorials on plotting in R using the **ggplot2** package is Rick Scavetta's [datacamp tutorial](https://www.datacamp.com/courses/data-visualization-with-ggplot2-1). The first chapter is free and covers a lot of excellent material about **ggplot2**. I **strongly** recommend you go through the first introduction chapter of this tutorial.
+
+As a helpful guide, take a look at the [RStudio cheatsheet](https://www.rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf) for **ggplot2**.
 
 # Plotting guides with `ggplot2`
 
