--- a/classNotes/12-data-visualization/slides-12-data-visualization.Rmd
+++ b/classNotes/12-data-visualization/slides-12-data-visualization.Rmd
@@ -263,7 +263,7 @@ plot(
   pch = 19,
   main = "Annual wildlife impacts",
   xlab = "Year",
-  ylab = "Age of victim")
+  ylab = "Count")
 ```
 ]
 --
@@ -569,7 +569,7 @@ Note addition of `stat = 'identity'`
 ---
 # Practice: `geom_bar()`
 
-Use the `birds` data frame and `geom_bar()` to create the following plots
+Use the `bears` and `birds` data frames with `geom_bar()` to create the following plots
 
 .leftcol[
 ```{r, ggbar_p1, echo=FALSE, fig.height=5, fig.width=7}
@@ -685,7 +685,7 @@ install.packages("ggThemeAssist")
 --
 First, assign the plot to an object name:
 ```{r, eval=FALSE}
-scatterPlot <- ggplot(data = df) +
+scatterPlot <- ggplot(data = bears) +
     geom_point(aes(x = year, y = age))
 ```
 
